# 2048-sdl3

./: CMakeLists.txt  README.md  game_2048.data  game_2048.js  game_2048.wasm  index.html  shell.html
.github/workflows/: build.yml  cmake-multi-platform.yml  deploy-pages.yml  web-build.yml
src/: engine.c  engine.h  main.c
